tests/ui/associated-types/hr-associated-type-bound-1.stderr
error[E0277]: the trait bound `str: Clone` is not satisfied
  --> $DIR/hr-associated-type-bound-1.rs:12:14
   |
LL |     type U = str;
   |              ^^^ the trait `Clone` is not implemented for `str`
   |
   = help: the trait `Clone` is implemented for `String`
note: required by a bound in `X`
  --> $DIR/hr-associated-type-bound-1.rs:3:33
   |
LL | trait X<'a>
   |       - required by a bound in this trait
LL | where
LL |     for<'b> <Self as X<'b>>::U: Clone,
   |                                 ^^^^^ required by this bound in `X`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
